[package]
name = "nexus_mods_api"
version = "0.0.1-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/dbidwell94/rusty_nexus"
authors = ["Devin Bidwell <dbidwell94@gmail.com>"]
keywords = ["Nexus", "Mods", "Raxios", "API", "Wrapper"]
description = "Rust wrapper for the official Nexus Mods API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raxios = {version = "0.5.0-alpha"}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = {version = "1.0.85"}
anyhow = {version = "1.0.65"}

[dev-dependencies]
tokio = {version = "1.21.1", features = ["test-util", "macros"]}
dotenv = {version = "0.15.0"}
dotenv_codegen = {version = "0.15.0"}